--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="index.html">Sobre Mí</a>
+            <a class="nav-link text-uppercase text-expanded" href="about.html">Sobre Mí</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="index.html">Eventos</a>
+            <a class="nav-link text-uppercase text-expanded" href="events.html">Eventos</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="index.html">Blog</a>
+            <a class="nav-link text-uppercase text-expanded" href="blog.html">Blog</a>
           </li>
         </ul>
       </div>
