--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
+         <video autoplay muted loop id="myVideo" poster="../assets/img/poster.png">
+            <source src="bg.mp4" type="video/mp4">
+        </video>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
@@ -35,9 +38,18 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
+        
             <div class="container">
                 <div class="masthead-subheading">¡Bienvenidos!</div>
                 <div class="masthead-heading text-uppercase">Fátima Escobedo</div>
+               <!-- <div class="row align-items-center">
+                <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-tiktok"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-instagram"></i></a>
+                </div>
+                </div>-->
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Saber más</a>
             </div>
         </header>
@@ -203,7 +215,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">Copyright © Fátima Escobedo 2021</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-tiktok"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-instagram"></i></a>
                     </div>
