--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
             <div class="container">
                 <div class="masthead-subheading">¡Bienvenidos!</div>
-                <div style="height: 200px;"><img src="assets/img/navbar-logo_white.png" alt="" /></div> 
+                <div style="height: 200px;"><img src="assets/img/navbar-logo_white.png" alt="" style="width: 50%;" /></div> 
                <!-- <div class="masthead-heading text-uppercase">Fátima Escobedo</div>-->
                <!-- <div class="row align-items-center">
                 <div class="col-lg-4 my-3 my-lg-0">
