--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Fotografía</h2>
                                     <p class="item-intro text-muted">Servicios fotográficos para marketing de productos y eventos.</p>
-                                    <img class="img-fluid d-block mx-auto" src="img/photoProduct.jpg" alt="" style="height: 500px;"/>
+                                    <img class="img-fluid d-block mx-auto" src="img/photoProduct.jpg" alt=""/>
                                     <p>La fotografía es una parte esencial en la buena promoción de tu producto. Ofrezco servicios de fotografía profesional para que presentes tu mercancía con fotos espectaculares y de alta claidad. Contáctame para obtener un presupuesto.</p>
-                                    <img class="img-fluid d-block mx-auto" src="img/photoProduct2.jpg" alt="" style="height: 500px;"/>
+                                    <img class="img-fluid d-block mx-auto" src="img/photoProduct2.jpg" alt=""/>
 
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
