--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Eventos</h2>
                                     <p class="item-intro text-muted">Organización de bodas y eventos.</p>
-                                    <img class="img-fluid d-block mx-auto" src="img/wpPoster.jpeg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/logoFatiEvents.jpg" alt="" style="width: 40%;"/>
                                     <p>Eventos para ser recordados. Para mí un evento memorable es aquel que posee significado personal, y ello merece una organización digna y de calidad.El trato profesional con mis clientes y a la vez el compromiso de hacer que tus eventos se conviertan en un recuerdo agradable a través del tiempo. </p>
+                                    <img class="img-fluid d-block mx-auto" src="img/wpPoster.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="img/wpEventEntreNuves.JPG" alt="" />
 
                                     <div class="col-xl-9 mx-auto">
