Fix sizes for mobile

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Eventos</h2>
+                                    <h2 class="text-uppercase" style="font-size: 1.5rem;">Eventos</h2>
                                     <p class="item-intro text-muted">Organización de bodas y eventos.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/logoFatiEvents.jpg" alt="" style="width: 40%;"/>
                                     <p>Eventos para ser recordados. Para mí un evento memorable es aquel que posee significado personal, y ello merece una organización digna y de calidad.El trato profesional con mis clientes y a la vez el compromiso de hacer que tus eventos se conviertan en un recuerdo agradable a través del tiempo. </p>
@@ -332,7 +332,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Fotografía</h2>
+                                    <h2 class="text-uppercase" style="font-size: 1.5rem;">Fotografía</h2>
                                     <p class="item-intro text-muted">Servicios fotográficos para marketing de productos y eventos.</p>
                                     <img class="img-fluid d-block mx-auto" src="img/photoProduct.jpg" alt=""/>
                                     <p>La fotografía es una parte esencial en la buena promoción de tu producto. Ofrezco servicios de fotografía profesional para que presentes tu mercancía con fotos espectaculares y de alta claidad. Contáctame para obtener un presupuesto.</p>
@@ -359,7 +359,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Marketing digital</h2>
+                                    <h2 class="text-uppercase" style="font-size: 1.5rem;">Marketing digital</h2>
                                     <p class="item-intro text-muted">Servicios gestión de redes sociales y campañas de publicidad digital.</p>
                                     <img class="img-fluid d-block mx-auto" src="img/marketingExample2.jpg" alt="" />
                                     <p>Si tienes un negocio de seguro necesitas vender más. La publicidad por medio de las redes sociales es un medio excelente para incrementar tus ventas o promocionar tus servicios. De ser así, necesitas una persona que se encarge de la gestión de tus redes sociales y de las campañas publicitarias digitales. ¡Contáctame!</p>
