--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <h2 class="section-heading text-uppercase">Contacto</h2>
                     <h3 class="section-subheading text-muted">Envíame un mensaje.</h3>
                 </div>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                <form id="contactForm" name="sentMessage" novalidate="novalidate" action="https://formspree.io/f/xeqvvjpv" method="POST">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -188,7 +188,7 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="E-mail *" required="required" data-validation-required-message="Por favor coloca tu correo electrónico." />
+                                <input class="form-control" type="email" name="_replyto" id="email" placeholder="E-mail *" required="required" data-validation-required-message="Por favor coloca tu correo electrónico." />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group mb-md-0">
@@ -198,7 +198,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group form-group-textarea mb-md-0">
-                                <textarea class="form-control" id="message" placeholder="Mensaje *" required="required" data-validation-required-message="Por favor escribe un mensaje."></textarea>
+                                <textarea class="form-control" id="message" name="message" placeholder="Mensaje *" required="required" data-validation-required-message="Por favor escribe un mensaje."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
