--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
                     <h2 class="section-heading text-uppercase">Contacto</h2>
                     <h3 class="section-subheading text-muted">Envíame un mensaje.</h3>
                 </div>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate" action="https://formspree.io/f/xeqvvjpv" method="POST">
+                
+                <form id="" name="sentMessage" novalidate="novalidate" action="https://formspree.io/f/xeqvvjpv" method="POST">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -210,6 +211,7 @@
                 </form>
             </div>
         </section>
+
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
