--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+
+        <!--FACEBOOK-->
+    <meta property="og:image" content="assets/img/wpPoster.jpeg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="683">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fatimaescobedo.netlify.app/"/>
+    <meta property="og:title" content="Sitio Web Fátima Escobedo" />
+    <meta property="og:description" content="Fátima Escobedo Wedding planner website." />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@">
+    <meta name="twitter:title" content="">
+    <meta name="twitter:creator" content="@">
+    <meta name="twitter:description" content="Fátima Escobedo Wedding planner website.">
+
     </head>
     <body id="page-top">
          <video autoplay muted loop id="myVideo" poster="../assets/img/poster.png">
