--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/01-thumbnail_rose.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Eventos</div>
-                                <div class="portfolio-caption-subheading text-muted">Wedding planner</div>
+                                <div class="portfolio-caption-heading">Event Planner</div>
+                                <div class="portfolio-caption-subheading text-muted">Eventos sociales y corporativos</div>
                             </div>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Fotografía</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-subheading text-muted">Publicitaria y retrato</div>
                             </div>
                         </div>
                     </div>
@@ -101,8 +101,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/03-thumbnail_rose.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Marketing digital</div>
-                                <div class="portfolio-caption-subheading text-muted">Gestión de redes sociales</div>
+                                <div class="portfolio-caption-heading">Creaciones Digitales</div>
+                                <div class="portfolio-caption-subheading text-muted">Diseños y branding</div>
                             </div>
                         </div>
                     </div>
