--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">Copyright © Fátima Escobedo 2021</div>
+                    <div class="col-lg-4 text-lg-left">Copyright © Fátima Escobedo <script>document.write(new Date().getFullYear())</script></div>
                     <div class="col-lg-4 my-3 my-lg-0">                    
                         <a class="btn btn-dark btn-social mx-2" href="https://vm.tiktok.com/ZMRea2vR6/"><i class="fab fa-tiktok"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/fatimaescobedo.events/"><i class="fab fa-facebook-f"></i></a>
